# Belt-Mod-Manager

./: .gitignore  LICENSE  README.md  build-css-conditional.js  build-resources-zip.js  credential-store.js  download-manager.js  mod-list.json  mod-scan-worker.js  package-lock.json  package.json  server.js  todo.md
backend/: build-css-conditional.js  download-manager.js  mod-scan-worker.js  server.bundle.js  server.js
backup/: current.json  last.json
electron/: main.js  preload.js
mod-list/: mod-list.json
profiles/: default.json  test 1.json  test 2.json
public/scripts/: main.js
public/styles/: main.css  main.css.map  main.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: server.test.js  ui.test.js
views/: index.ejs
