[package]
name = "belt-mod-manager"
version = "0.9.6"
description = "Factorio Mod Manager by Kraid"
authors = ["Kraid | Tathagata S."]
edition = "2021"

[lib]
name = "belt_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
